--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <!-- reset css -->
   <link rel="stylesheet" href="/css/reset.css">
+  <!-- fontawesome -->
+  <script src="https://kit.fontawesome.com/a029ab0cc6.js" crossorigin="anonymous"></script>
+  <!-- drawer.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/css/drawer.min.css">
+  <!-- jquery & iScroll -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.2.0/iscroll.min.js"></script>
+  <!-- drawer.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/js/drawer.min.js"></script>
 </head>
 <body>
   
