メディアクエリの記述

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/a029ab0cc6.js" crossorigin="anonymous"></script>
   <!-- drawer.css -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/css/drawer.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.2/css/drawer.min.css" media="screen and (max-width:767px)">
   <!-- jquery & iScroll -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.2.0/iscroll.min.js"></script>
