--- a/index.html
+++ b/index.html
@@ -25,19 +25,76 @@
   <link rel="stylesheet" href="/css/style.css">
   <script src="/js/script.js"></script>
 </head>
-<body>
-  <header role="banner">
-    <button type="button" class="drawer-toggle drawer-hamburger">
-      <span class="sr-only">toggle navigation</span>
-      <span class="drawer-hamburger-icon"></span>
-    </button>
-    <nav class="drawer-nav" role="navigation">
-      <ul class="drawer-menu">
-        <li><a class="drawer-brand" href="#">Brand</a></li>
-        <li><a class="drawer-menu-item" href="#">Nav1</a></li>
-        <li><a class="drawer-menu-item" href="#">Nav2</a></li>
-      </ul>
-    </nav>
+<body class="drawer drawer--right">
+  <header class="header">
+    <div class="header-inner">
+      <h1 class="header-logo"><img src="./img/logo.png" alt="sobolon"></h1>
+      <button type="button" class="drawer-toggle drawer-hamburger">
+        <span class="sr-only">toggle navigation</span>
+        <span class="drawer-hamburger-icon"></span>
+      </button>
+      <nav class="drawer-nav header-nav">
+        <ul class="drawer-menu header-nav-list">
+          <li class="header-nav-item">
+            <a class="header-nav-item-link" href="#concept">Concept</a>
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-item-link" href="#feature">Feature</a>
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-item-link" href="#products">Products</a>
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-item-link" href="#news">News</a>
+          </li>
+          <li class="header-nav-item">
+            <a class="header-nav-item-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
+  <!-- /.header -->
+
+  <main class="main">
+    <div class="top">
+
+    </div>
+    <!-- /.top -->
+    <section class="concept">
+
+    </section>
+    <!-- /.concept -->
+    <section class="feature">
+
+    </section>
+    <!-- /.feature -->
+    <section class="about">
+
+    </section>
+    <!-- /.about -->
+    <section class="products">
+
+    </section>
+    <!-- /.products -->
+    <section class="news">
+
+    </section>
+    <!-- /.news -->
+    <section class="concept2">
+      
+    </section>
+    <!-- /.concept2 -->
+    <section class="contact">
+
+    </section>
+    <!-- /.contact -->
+  </main>
+  
+  <!-- /.main -->
+  <footer class="footer">
+
+  </footer>
+  <!-- /.footer -->
 </body>
 </html>
