フッターの完成

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
   
   <!-- /.main -->
   <footer class="footer">
-    <footer-logo><img src="./img/logo.png" alt="sobolon"></footer-logo>
+    <div class="footer-logo"><img src="./img/logo.png" alt="sobolon"></div>
     <ul class="footer-nav-list">
       <li class="footer-nav-item"><a href="#" class="footer-nav-item-link">プライバシーポリシー</a>
       </li>
