共通クラスのコーディング完了

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <!-- /.top -->
     <!-- id conceptも付与する -->
-    <section id="concept" class="concept inner">
+    <section id="concept" class="concept inner section">
       <h2 class="util-title">Concept</h2>
       <div class="concept-inner">
         <div class="concept-picture"><img src="./img/concept-1.png" alt=""></div>
@@ -78,7 +78,7 @@
       </div>
     </section>
     <!-- /.concept -->
-    <section id="feature" class="feature inner">
+    <section id="feature" class="feature inner section">
       <h2 class="util-title">Feature</h2>
       <!-- リストでコーディング -->
       <ul class="feature-list">
@@ -109,14 +109,14 @@
       </ul>
     </section>
     <!-- /.feature -->
-    <section class="about">
+    <section class="about section">
       <div class="about-inner inner">
         <p class="about-title">消費者である私たちが、<br>地球環境のためにできることは何か？</p>
         <p class="about-text">そんな視点からこのブランドは生まれました。<br>オシャレを楽しむ気持ちを大切にしながらも、 <br class="is-pc">ただ可愛いだけじゃない環境にやさしいアクセサリーを選ぶ人が増えていったら…<br>その変化は少しずつ、だけども本質的に、<br>この世界をHappyに変えていくのだと、私たちは考えます。</p>
       </div>
     </section>
     <!-- /.about -->
-    <section class="products inner">
+    <section class="products inner section">
       <h2 class="util-title">Products</h2>
       <!-- リストでコーディング -->
       <ul class="products-list">
@@ -153,7 +153,7 @@
       </div>
     </section>
     <!-- /.products -->
-    <section class="news inner">
+    <section class="news inner section">
       <h2 class="util-title"></h2>
       <div class="news- list">
         <article class="news-item">
@@ -199,7 +199,7 @@
       </div>
     </section>
     <!-- /.news -->
-    <section class="concept2">
+    <section class="concept2 inner section">
       <div class="concept2-inner">
         <div class="concept2-picture"><img src="/img/concept-2.png" alt=""></div>
         <div class="concept2-message">
