--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="top-message">
         <!-- brはpcのみ適用されるのでクラスを設けて分ける -->
         <div class="top-message-title">“可愛い” で <br class="is-pc">地球を守る！</div>
-        <div class="top-message-text">海洋マイクロプラスチックを素材とした ハンドメイドアクセサリー「sobolon」</div>
+        <div class="top-message-text">海洋マイクロプラスチックを素材とした<br>ハンドメイドアクセサリー「sobolon」</div>
       </div>
     </div>
     <!-- /.top -->
