--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
     </section>
     <!-- /.products -->
     <section class="news inner section">
-      <h2 class="util-title"></h2>
-      <div class="news- list">
+      <h2 class="util-title">News</h2>
+      <div class="news-list">
         <article class="news-item">
           <a href="" class="news-item-link">
             <div class="news-item-header">
