スムーズスクロール idを追加 実装

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <script src="/js/script.js"></script>
 </head>
 <body class="drawer drawer--right">
-  <header class="header">
+  <header id="js-header" class="header">
     <div class="header-inner inner">
       <h1 class="header-logo"><img src="./img/logo.png" alt="sobolon"></h1>
       <button type="button" class="drawer-toggle drawer-hamburger">
@@ -116,7 +116,7 @@
       </div>
     </section>
     <!-- /.about -->
-    <section class="products inner section">
+    <section id="products" class="products inner section">
       <h2 class="util-title">Products</h2>
       <!-- リストでコーディング -->
       <ul class="products-list">
@@ -153,7 +153,7 @@
       </div>
     </section>
     <!-- /.products -->
-    <section class="news inner section">
+    <section id="news" class="news inner section">
       <h2 class="util-title">News</h2>
       <div class="news-list">
         <article class="news-item">
@@ -209,7 +209,7 @@
       </div>
     </section>
     <!-- /.concept2 -->
-    <section class="contact">
+    <section id="contact" class="contact">
       <h2 class="util-title">Contact</h2>
       <form action="" class="contact-form" method="POST">
       <p class="contact-text"><span class="contact-text-inline">＊</span>は入力必須項目です</p>
