--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <!-- /.header -->
 
   <main class="main">
-    <div class="top inner">
+    <div class="top inner wow fadeIn">
       <div class="top-picture"></div>
       <div class="top-message">
         <!-- brはpcのみ適用されるのでクラスを設けて分ける -->
@@ -68,10 +68,10 @@
     <!-- /.top -->
     <!-- id conceptも付与する -->
     <section id="concept" class="concept inner section">
-      <h2 class="util-title">Concept</h2>
+      <h2 class="util-title wow fadeInUp">Concept</h2>
       <div class="concept-inner">
-        <div class="concept-picture"><img src="./img/concept-1.png" alt=""></div>
-        <div class="concept-message">
+        <div class="concept-picture wow fadeInUp"><img src="./img/concept-1.png" alt=""></div>
+        <div class="concept-message wow fadeInUp">
           <p class="concept-message-title">可愛くてステキなのは当たり前。<br> 地球にやさしくあるのも当たり前。</p>
           <p class="concept-message-text">「sobolon」は、海洋汚染の要因であるマイクロプラスチックを回収し、それらを素材としたハンドメイドアクセサリーを製作しているブランドです。</p>
         </div>
@@ -79,10 +79,10 @@
     </section>
     <!-- /.concept -->
     <section id="feature" class="feature inner section">
-      <h2 class="util-title">Feature</h2>
+      <h2 class="util-title wow fadeInUp">Feature</h2>
       <!-- リストでコーディング -->
       <ul class="feature-list">
-        <li class="feature-item">
+        <li class="feature-item wow fadeInUp">
           <a href="#" class="feature-item-link">
             <div class="feature-item-picture"><img src="/img/feature-1.png" alt=""></div>
             <div class="feature-item-body">
@@ -90,7 +90,7 @@
             </div>
           </a>
         </li>
-        <li class="feature-item">
+        <li class="feature-item wow fadeInUp">
           <a href="#" class="feature-item-link">
             <div class="feature-item-picture"><img src="./img/feature-2.png" alt=""></div>
             <div class="feature-item-body">
@@ -98,7 +98,7 @@
             </div>
           </a>
         </li>
-        <li class="feature-item">
+        <li class="feature-item wow fadeInUp">
           <a href="#" class="feature-item-link">
             <div class="feature-item-picture"><img src="./img/feature-3.png" alt=""></div>
             <div class="feature-item-body">
@@ -110,17 +110,17 @@
     </section>
     <!-- /.feature -->
     <section class="about section">
-      <div class="about-inner inner">
+      <div class="about-inner inner wow fadeInUp">
         <p class="about-title">消費者である私たちが、<br>地球環境のためにできることは何か？</p>
         <p class="about-text">そんな視点からこのブランドは生まれました。<br>オシャレを楽しむ気持ちを大切にしながらも、 <br class="is-pc">ただ可愛いだけじゃない環境にやさしいアクセサリーを選ぶ人が増えていったら…<br>その変化は少しずつ、だけども本質的に、<br>この世界をHappyに変えていくのだと、私たちは考えます。</p>
       </div>
     </section>
     <!-- /.about -->
     <section id="products" class="products inner section">
-      <h2 class="util-title">Products</h2>
+      <h2 class="util-title wow fadeInUp">Products</h2>
       <!-- リストでコーディング -->
       <ul class="products-list">
-        <li class="products-item">
+        <li class="products-item wow fadeInUp">
           <a href="#" class="products-item-link">
             <div class="products-item-picture"><img src="/img/product-1.png" alt=""></div>
             <div class="products-item-body">
@@ -129,7 +129,7 @@
             </div>
           </a>
         </li>
-        <li class="products-item">
+        <li class="products-item wow fadeInUp">
           <a href="#" class="products-item-link">
             <div class="products-item-picture"><img src="./img/product-2.png" alt=""></div>
             <div class="products-item-body">
@@ -138,7 +138,7 @@
             </div>
           </a>
         </li>
-        <li class="products-item">
+        <li class="products-item wow fadeInUp">
           <a href="#" class="products-item-link">
             <div class="products-item-picture"><img src="./img/product-3.png" alt=""></div>
             <div class="products-item-body">
@@ -149,14 +149,14 @@
         </li>
       </ul>
       <div class="products-footer">
-        <a href="#" class="util-link">MORE</a>
+        <a href="#" class="util-link wow fadeInUp">MORE</a>
       </div>
     </section>
     <!-- /.products -->
     <section id="news" class="news inner section">
-      <h2 class="util-title">News</h2>
+      <h2 class="util-title wow fadeInUp">News</h2>
       <div class="news-list">
-        <article class="news-item">
+        <article class="news-item wow fadeInUp">
           <a href="" class="news-item-link">
             <div class="news-item-header">
               <div class="news-item-picture"><img src="/img/news-1.png" alt=""></div>
@@ -169,7 +169,7 @@
             </div>
           </a>
         </article>
-        <article class="news-item">
+        <article class="news-item wow fadeInUp">
           <a href="" class="news-item-link">
             <div class="news-item-header">
               <div class="news-item-picture"><img src="/img/news-2.png" alt=""></div>
@@ -181,7 +181,7 @@
             </div>
           </a>
         </article>
-        <article class="news-item">
+        <article class="news-item wow fadeInUp">
           <a href="" class="news-item-link">
             <div class="news-item-header">
               <div class="news-item-picture"><img src="/img/news-3.png" alt=""></div>
@@ -195,14 +195,14 @@
         </article>
       </div>
       <div class="news-footer">
-        <a href="#" class="util-link">MORE</a>
+        <a href="#" class="util-link wow fadeInUp">MORE</a>
       </div>
     </section>
     <!-- /.news -->
     <section class="concept2 inner section">
-      <div class="concept2-inner">
-        <div class="concept2-picture"><img src="/img/concept-2.png" alt=""></div>
-        <div class="concept2-message">
+      <div class="concept2-inner wow">
+        <div class="concept2-picture wow fadeInUp"><img src="/img/concept-2.png" alt=""></div>
+        <div class="concept2-message wow fadeInUp">
           <p class="concept2-message-title">合言葉は、<br>「 “可愛い” で 地球を守る！」</p>
           <p class="concept2-message-text">深刻化している環境問題に対して、否定や制限、禁止といった強制的な方法ではなく、明るく幸せな未来を目指して、「可愛い」「楽しい」の力を信じて、愛につながる選択を世の中に増やしていきます。</p>
         </div>
@@ -210,8 +210,8 @@
     </section>
     <!-- /.concept2 -->
     <section id="contact" class="contact">
-      <h2 class="util-title">Contact</h2>
-      <form action="" class="contact-form" method="POST">
+      <h2 class="util-title wow fadeInUp">Contact</h2>
+      <form action="" class="contact-form wow fadeInUp" method="POST">
       <p class="contact-text"><span class="contact-text-inline">＊</span>は入力必須項目です</p>
       <dl class="contact-list">
         <div class="contact-item">
