--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           <a href="#" class="contact-privacy-link">プライバシーポリシー</a>に同意します。
         </p>
         <div class="contact-footer-submit">
-          <button class="util-link -submit" type="submit">送信</button>
+          <button id="js-submit" class="util-link -submit" type="submit" disabled>送信</button>
         </div>
       </div>
       </form>
